# DGP-BO

./: .gitignore  LICENSE  README.md  REPRODUCING.md  pyproject.toml
code/: .gitignore  .pre-commit-config.yaml  5space-md16-tec-new.h5  5space-tec-corr-scaled.h5  MeanCov1.py  acquisitionFunc.py  acquisitionFuncdebug2.py  dgp-het-tec-MO-11-cuda.py  dgp-het-tec-new-MO-01-cuda.py  dgp-iso-tec-MO-11.py  dgp-iso-tec-new-MO-01.py  gp-tec-MO-11.py  gp-tec-new-MO-01.py  gpModel.py  main.py  main_new.py  mor.h5  mtgp-tec-MO-11.py  mtgp-tec-new-MO-01.py  multiobjective.py  pyproject.toml  run
code/scripts/: dgp-het-tec-MO-11-cuda.py  dgp-het-tec-new-MO-01-cuda.py  dgp-iso-tec-MO-11.py  dgp-iso-tec-new-MO-01.py  gp-tec-MO-11.py  gp-tec-new-MO-01.py  main_new.py  mtgp-tec-MO-11.py  mtgp-tec-new-MO-01.py
code/scripts/MO/: dgp-het-tec-MO-11-cuda.py  gp-tec-MO-11.py
code/scripts/new-MO/: dgp-het-tec-new-MO-01-cuda.py  dgp-iso-tec-new-MO-01.py  gp-tec-new-MO-01.py  mtgp-tec-new-MO-01.py
code/src/dgp_bo/: MeanCov1.py  __init__.py  acquisitionFunc.py  acquisitionFuncdebug2.py  acquisitions.py  dirichlet.py  gpModel.py  multiobjective.py
environment/: Dockerfile  gptor2_req2.yml
metadata/: metadata.yml
scripts/: dgp-het-tec-new-MO-01-cuda.py  dgp-iso-tec-new-MO-01.py  gp-tec-new-MO-01.py  mtgp-tec-new-MO-01.py
scripts/MO/: dgp-het-tec-MO-11-cuda.py  dgp-iso-tec-MO-11.py  gp-tec-MO-11.py  mtgp-tec-MO-11.py
scripts/new-MO/: dgp-het-tec-new-MO-01-cuda.py  dgp-iso-tec-new-MO-01.py  gp-tec-new-MO-01.py  mtgp-tec-new-MO-01.py
src/dgp_bo/: __init__.py  acquisitions.py  dirichlet.py  gp.py  mtdgp.py  mtgp.py  multiobjective.py  utils.py
